--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,22 @@ services: docker
 
 before_install:
   - docker-compose up --build -d
+  - docker login -u "$HEROKU_USERNAME" -p "$HEROKU_API_KEY" registry.heroku.com
 
 script:
   - docker-compose exec --env 'RAILS_ENV=test' web rails db: create
   - docker-compose exec --env 'RAILS_ENV=test' web rails db: migrate
   - docker-compose exec --env 'RAILS_ENV=test' web rails test
+
+deploy:
+  # dockerを利用しない場合は、「provider: heroku」
+  provider: script 
+  script:
+    docker build -t registry.heroku.com/$HEROKU_APP_NAME/web -f Dockerfile.prod .;
+    docker push registry.heroku.com/$HEROKU_APP_NAME/web .;
+    # herokuの環境変数を上記で設定しているため、log-inのscriptは不要らしい
+    heroku run --app $HEROKU_APP_NAME rails db:migrate;
+
+  # masterにpushされた場合のみ、実行されるようにする。
+  on:
+    branch: master
